--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,3 +23,20 @@ jobs:
       run: python -m pip install .
     - name: Run tests
       run: haas simplesat
+
+  build-docs:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Clone the source
+      uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'
+    - name: Install doc dependencies
+      run: python -m pip install -r doc_requirements.txt
+    - name: Install sat-solver
+      run: python -m pip install .
+    - name: Build docs
+      run: cd docs && make html
