--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        runtime: ['2.7', '3.6', '3.8', 'pypy']
+        runtime: ['2.7', '3.6', '3.8', 'pypy3.8']
 
     steps:
     - name: Clone the source
