--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,11 +4,12 @@ on: [pull_request, workflow_dispatch]
 
 jobs:
   run-tests:
-    runs-on: ubuntu-latest
-
     strategy:
       matrix:
         runtime: ['2.7', '3.6', '3.8', 'pypy3.8']
+        os: ['ubuntu-latest', 'windows-latest']
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Clone the source
