--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -88,4 +88,4 @@ jobs:
     - name: Install flake8
       run: python -m pip install flake8
     - name: Lint codebase
-      run: python -m flake8 sat-solver/
+      run: python -m flake8 simplesat/
