--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -30,7 +30,12 @@ jobs:
     - name: Install sat-solver
       run: python -m pip install .
     - name: Run tests
-      run: haas simplesat
+      run: coverage run -p -m haas simplesat
+    - name: Upload Coverage info
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-${{matrix.os}}-${{matrix.runtime}}
+        path: .coverage.*  
   build-docs:
     runs-on: ubuntu-latest
     needs: run-tests
