--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dev dependencies
       run: python -m pip install -r dev_requirements.txt
     - name: Install sat-solver
-      run: python -m pip install .
+      run: python -m pip install -e .
     - name: Run tests
       run: coverage run -p -m haas simplesat
     - name: Upload Coverage info
