--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,10 +11,10 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        runtime: [3.6, 3.8, 3.11, pypy3.8]
-        os: [ubuntu-20.04, macos-12, macos-latest, windows-2019]
-        exclude:
-        - os: macos-latest
+        runtime: [3.8, 3.11, pypy3.8]
+        os: [ubuntu-latest, macos-12, macos-latest, windows-latest]
+        include:
+        - os: ubuntu-20.04
           runtime: 3.6
     runs-on: ${{ matrix.os }}
     needs: code-lint
