--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,6 +31,8 @@ jobs:
       run: python -m pip install -e .
     - name: Run tests
       run: coverage run -p -m haas simplesat
+    - name: check
+      run: ls -a
     - name: Upload Coverage info
       uses: actions/upload-artifact@v4
       with:
