--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,8 +11,8 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        runtime: [3.8]
-        os: [ubuntu-latest]
+        runtime: [3.8, '3.11', pypy3.8]
+        os: [ubuntu-latest, macos-12, macos-latest, windows-latest]
         include:
         - os: ubuntu-20.04
           runtime: 3.6
@@ -31,13 +31,12 @@ jobs:
       run: python -m pip install -e .
     - name: Run tests
       run: coverage run -p -m haas simplesat
-    - name: check
-      run: ls -a
     - name: Upload Coverage info
       uses: actions/upload-artifact@v4
       with:
         name: coverage-${{matrix.os}}-${{matrix.runtime}}
-        path: '.coverage.*'  
+        path: .coverage.*  
+        include-hidden-files: true
   build-docs:
     runs-on: ubuntu-latest
     needs: run-tests
