--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: coverage-${{matrix.os}}-${{matrix.runtime}}
-        path: .coverage.*  
+        path: coverage.*  
   build-docs:
     runs-on: ubuntu-latest
     needs: run-tests
