--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,7 +11,7 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        runtime: [3.8, 3.11, pypy3.8]
+        runtime: [3.8, '3.11', pypy3.8]
         os: [ubuntu-latest, macos-12, macos-latest, windows-latest]
         include:
         - os: ubuntu-20.04
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: coverage-${{matrix.os}}-${{matrix.runtime}}
-        path: .coverage.*  
+        path: coverage.*  
   build-docs:
     runs-on: ubuntu-latest
     needs: run-tests
