--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,8 +15,8 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        runtime: [3.8, '3.11', pypy3.8]
-        os: [ubuntu-latest, macos-13, macos-latest, windows-latest]
+        runtime: [3.8, '3.11', '3.12', pypy3.8]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     needs: code-lint
     steps:
