--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -82,14 +82,13 @@ jobs:
         name: coverage-report
         path: htmlcov/*
   code-lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.6
       uses: actions/setup-python@v5
       with:
-        python-version: 3.6
-    - name: Install flake8
+        python-version: 3.8
+    - name: install flake8
       run: python -m pip install flake8
-    - name: Lint codebase
+    - name: lint codebase
       run: python -m flake8 simplesat/
