--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,11 +2,11 @@ name: simplesat
 
 on:
   push:
-    branches: 
+    branches:
       - main
       - maintenance/*
   pull_request:
-    branches: 
+    branches:
       - main
       - maintenance/*
   workflow_dispatch:
@@ -15,11 +15,8 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        runtime: [3.8, '3.11', pypy3.8]
-        os: [ubuntu-latest, macos-12, macos-latest, windows-latest]
-        include:
-        - os: ubuntu-20.04
-          runtime: 3.6
+        runtime: [3.8, '3.11', '3.12', pypy3.8]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     needs: code-lint
     steps:
@@ -39,7 +36,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: coverage-${{matrix.os}}-${{matrix.runtime}}
-        path: coverage.*  
+        path: coverage.*
   build-docs:
     runs-on: ubuntu-latest
     needs: run-tests
@@ -85,14 +82,13 @@ jobs:
         name: coverage-report
         path: htmlcov/*
   code-lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.6
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
-        python-version: 3.6
-    - name: Install flake8
+        python-version: 3.8
+    - name: install flake8
       run: python -m pip install flake8
-    - name: Lint codebase
+    - name: lint codebase
       run: python -m flake8 simplesat/
