--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifier =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 zip_safe = False
@@ -30,7 +31,7 @@ packages =
     simplesat.test_data
     simplesat.utils
     simplesat.utils.tests
-python_requires = >=3.6
+python_requires = >=3.8
 install_requires =
     attrs >= 17.4.0
     okonomiyaki >= 0.16.6
