--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -4,7 +4,7 @@ on:
   # Triggers the workflow when simplesat is released on Github
   release:
     types:
-        - released
+      - released
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,11 +19,23 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Retrieve release distributions
-        uses: actions/download-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
-
-      - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc7
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.release.tag_name }}
+    - name: new release
+      if: ${{ github.event_name == 'release' }}
+      run: echo "release_tag=${{ github.event.release.tag_name }}" >> "$GITHUB_ENV"
+    - name: manual build
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      run: echo "release_tag=${{ inputs.release_tag }}" >> "$GITHUB_ENV"
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+    - name: install custom action dependencies
+      run: python -m pip install requests
+    - name: donwload assets
+      uses:  ./.github/actions/download-assets
+      with:
+        tag: ${{ env.release_tag }}
+    - name: publish release distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc7
