--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -19,7 +19,7 @@ jobs:
     permissions:
       id-token: write
       actions: read
-      contents: read
+      contents: write
       statuses: write
     steps:
     - uses: actions/checkout@v4
@@ -35,10 +35,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    - name: install custom action dependencies
-      run: python -m pip install requests
-    - name: donwload assets
-      uses:  ./.github/actions/download-assets
+    - name: install work dependencies
+      run: python -m pip install build wheel requests
+    - name: build wheel
+      run: python -m build -s -w -n -x
+    - name: upload assets
+      uses:  ./.github/actions/upload-assets
       with:
         tag: ${{ env.release_tag }}
     - name: publish release distributions to PyPI
