--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -14,10 +14,9 @@ on:
         type: string
 
 jobs:
-  pypi-publish:
+  build-wheel:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write
       actions: read
       contents: write
       statuses: write
@@ -39,9 +38,25 @@ jobs:
       run: python -m pip install build wheel requests
     - name: build wheel
       run: python -m build -s -w -n -x
-    - name: upload assets
+    - name: upload assets to tag
       uses:  ./.github/actions/upload-assets
       with:
         tag: ${{ env.release_tag }}
-    - name: publish release distributions to PyPI
-      uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc7
+    - name: upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: release-dists
+        path: dist/
+  pypi-publish:
+    runs-on: ubuntu-latest
+    needs: [build-wheel]
+    permissions:
+      id-token: write
+    steps:
+      - name: Retrieve release distributions
+        uses: actions/download-artifact@v4
+        with:
+          name: release-dists
+          path: dist/
+      - name: publish release distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc7
