--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -4,7 +4,7 @@ on:
   # Triggers the workflow when simplesat is released on Github
   release:
     types:
-        - released
+      - released
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -14,8 +14,42 @@ on:
         type: string
 
 jobs:
+  build-wheel:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: write
+      statuses: write
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.release.tag_name }}
+    - name: new release
+      if: ${{ github.event_name == 'release' }}
+      run: echo "release_tag=${{ github.event.release.tag_name }}" >> "$GITHUB_ENV"
+    - name: manual build
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      run: echo "release_tag=${{ inputs.release_tag }}" >> "$GITHUB_ENV"
+    - name: setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+    - name: install work dependencies
+      run: python -m pip install build wheel requests
+    - name: build wheel
+      run: python -m build -s -w -n -x
+    - name: upload assets to tag
+      uses:  ./.github/actions/upload-assets
+      with:
+        tag: ${{ env.release_tag }}
+    - name: upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: release-dists
+        path: dist/
   pypi-publish:
     runs-on: ubuntu-latest
+    needs: [build-wheel]
     permissions:
       id-token: write
     steps:
@@ -24,6 +58,5 @@ jobs:
         with:
           name: release-dists
           path: dist/
-
-      - name: Publish release distributions to PyPI
+      - name: publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc7
