--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -58,5 +58,11 @@ jobs:
         with:
           name: release-dists
           path: dist/
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
       - name: publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc7
+        with:
+          print-hash: true
