--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -63,6 +63,6 @@ jobs:
         with:
           python-version: '3.11'
       - name: publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc7
+        uses: pypa/gh-action-pypi-publish@67339c736fd9354cd4f8cb0b744f2b82a74b5c70  # v1.12.3
         with:
           print-hash: true
