--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -21,15 +21,15 @@ jobs:
       contents: write
       statuses: write
     steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.release.tag_name }}
     - name: new release
       if: ${{ github.event_name == 'release' }}
       run: echo "release_tag=${{ github.event.release.tag_name }}" >> "$GITHUB_ENV"
     - name: manual build
       if: ${{ github.event_name == 'workflow_dispatch' }}
       run: echo "release_tag=${{ inputs.release_tag }}" >> "$GITHUB_ENV"
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ env.release_tag }}
     - name: setup Python
       uses: actions/setup-python@v5
       with:
@@ -58,11 +58,5 @@ jobs:
         with:
           name: release-dists
           path: dist/
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
       - name: publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@67339c736fd9354cd4f8cb0b744f2b82a74b5c70  # v1.12.3
-        with:
-          print-hash: true
